--- a/doc/src/ts-time/LocalDateTime.yaml
+++ b/doc/src/ts-time/LocalDateTime.yaml
@@ -185,7 +185,7 @@ symbols:
       manipulation:
         header: Manipulate
         text: |
-          <p>Every object in ts-time is immutable. Therefore every manipulation returns a new instance of an object.</p>
+          <p>Every object in ts-time is immutable. Therefore every manipulation returns a new object.</p>
           <p>To add/subtract a %Period, call %plusPeriod/%minusPeriod method:</p>
           <pre>
           const dateTime = %LocalDateTime.%ofComponents(2022, %FEBRUARY, 15, 18, 30, 15, 225);
@@ -322,7 +322,7 @@ symbols:
           <p>You can define a custom %context object to internationalize the formatted strings:</p>
           <pre>
           const context = {monthShortNames: ["Янв", "Фев", "Мар"]};
-          formatter.%format(date, context); // "15.Фев'22, 06:30 PM"
+          formatter.%format(dateTime, context); // "15.Фев'22, 06:30 PM"
           </pre>
         references:
           toString:
