--- a/doc/src/ts-time/OffsetDateTime.yaml
+++ b/doc/src/ts-time/OffsetDateTime.yaml
@@ -198,7 +198,7 @@ symbols:
       manipulation:
         header: Manipulate
         text: |
-          <p>Every object in ts-time is immutable. Therefore every manipulation returns a new instance of an object.</p>
+          <p>Every object in ts-time is immutable. Therefore every manipulation returns a new object.</p>
           <p>To add/subtract a %Period, call %plusPeriod/%minusPeriod method:</p>
           <pre>
           const offsetDateTime = %OffsetDateTime.%parse("2022-02-15T18:30:15.225-02:00");
@@ -332,7 +332,7 @@ symbols:
           <p>You can define a custom %context object to internationalize the formatted strings:</p>
           <pre>
           const context = {monthShortNames: ["Янв", "Фев", "Мар"]};
-          formatter.%format(date, context); // "15.Фев'22, 06:30 PM (UTC-02)"
+          formatter.%format(offsetDateTime, context); // "15.Фев'22, 06:30 PM (UTC-02)"
           </pre>
         references:
           toString:
